Fix: Slider range 0-100 not showing in form detail

--- a/src/app/components/race-dynamic-form/form-detail/form-detail.component.scss
+++ b/src/app/components/race-dynamic-form/form-detail/form-detail.component.scss
@@ -108,3 +108,7 @@
 .ghost-loading {
   padding: 18px 18px;
 }
+
+::ng-deep .slider-values {
+  color: #000 !important;
+}
